apps/omni/omni-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: omni
  namespace: omni
  labels:
    app: omni
spec:
  selector:
    matchLabels:
      app: omni
  template:
    metadata:
      labels:
        app: omni
    spec:
      containers:
      - name: omni
        image: ghcr.io/siderolabs/omni:v0.45.0
        args:
          - --account-id="af3f49dd-8319-412f-93a1-3167788527e6"
          - --name="MorrisLAN Omni"
          - --cert=/etc/omni/tls/tls.crt
          - --key=/etc/omni/tls/tls.key
          - --private-key-source=file:///omni.asc
          - --etcd-embedded=true
          - --siderolink-api-advertised-url=https://siderolink.morrislan.net
          - --advertised-kubernetes-proxy-url=https://k8s.morrislan.net
          - --siderolink-wireguard-advertised-addr=143.198.240.199:30180
          - --auth-saml-enabled=true
          - --auth-saml-url=https://auth.morrislan.net/api/v3/providers/saml/47/metadata/?download
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
            add:
              - NET_ADMIN
        resources:
          limits:
            squat.ai/tun: 1
        ports:
          - name: omni
            containerPort: 8080
            protocol: TCP
          - name: siderolink
            containerPort: 8090
            protocol: TCP
          - name: k8s-proxy
            containerPort: 8095
            protocol: TCP
          - name: wireguard
            containerPort: 50180
            protocol: UDP
        volumeMounts:
        - name: etcd
          mountPath: /_out
        - name: omni-asc
          mountPath: /omni.asc
          subPath: "omni.asc"
          readOnly: true
      volumes:
      - name: etcd
        persistentVolumeClaim:
          claimName: omni-etcd
      - name: omni-asc
        secret:
          secretName: vault-omni
