apps/omni/omni-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: omni
  namespace: omni
  labels:
    app: omni
  annotations:
    external-dns.alpha.kubernetes.io/hostname: omni.morrislan.net.
spec:
  selector:
    app: omni
  type: LoadBalancer
  ports:
    - name: omni
      port: 443
      containerPort: 8080
      protocol: TCP
    - name: siderolink
      port: 8090
      protocol: TCP
    - name: k8s-proxy
      port: 8095
      protocol: TCP
    - name: wireguard
      port: 50180
      protocol: UDP
