apps/omni/omni-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: GRPC
    nginx.ingress.kubernetes.io/proxy-body-size: 32m
    nginx.ingress.kubernetes.io/service-upstream: "true"
    cert-manager.io/cluster-issuer: letsencrypt
  labels:
    app: omni
  name: api
  namespace: omni
spec:
  ingressClassName: nginx
  rules:
  - host: omni.morrislan.net
    http:
      paths:
      - backend:
          service:
            name: omni-internal-grpc
            port:
              number: 8080
        path: /cosi.resource.State
        pathType: ImplementationSpecific
      - backend:
          service:
            name: internal-grpc
            port:
              number: 8080
        path: /management.ManagementService
        pathType: ImplementationSpecific
      - backend:
          service:
            name: internal-grpc
            port:
              number: 8080
        path: /machine.MachineService
        pathType: ImplementationSpecific
      - backend:
          service:
            name: internal-grpc
            port:
              number: 8080
        path: /cluster.ClusterService
        pathType: ImplementationSpecific
      - backend:
          service:
            name: internal-grpc
            port:
              number: 8080
        path: /inspect.InspectService
        pathType: ImplementationSpecific
      - backend:
          service:
            name: internal-grpc
            port:
              number: 8080
        path: /resource.ResourceService
        pathType: ImplementationSpecific
      - backend:
          service:
            name: internal-grpc
            port:
              number: 8080
        path: /storage.StorageService
        pathType: ImplementationSpecific
      - backend:
          service:
            name: internal-grpc
            port:
              number: 8080
        path: /time.TimeService
        pathType: ImplementationSpecific
      - backend:
          service:
            name: internal-grpc
            port:
              number: 8080
        path: /auth.AuthService
        pathType: ImplementationSpecific
      - backend:
          service:
            name: internal-grpc
            port:
              number: 8080
        path: /oicd.
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - omni.morrislan.net
    - k8s.morrislan.net
    - siderolink.morrislan.net
    secretName: omni-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-proxy
  namespace: omni
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  labels:
   app: omni
spec:
  ingressClassName: nginx
  rules:
  - host: k8s.morrislan.net
    http:
      paths:
      - backend:
          service:
            name: internal
            port:
              number: 8095
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - omni.morrislan.net
    - k8s.morrislan.net
    - siderolink.morrislan.net
    secretName: omni-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: GRPC
    cert-manager.io/cluster-issuer: letsencrypt
  name: siderolink
  namespace: omni
  labels:
    app: omni
spec:
  ingressClassName: nginx
  rules:
  - host: siderolink.morrislan.net
    http:
      paths:
      - backend:
          service:
            name: internal-grpc
            port:
              number: 8090
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - omni.morrislan.net
    - k8s.morrislan.net
    - siderolink.morrislan.net
    secretName: omni-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  labels:
    app: omni
  namespace: omni
spec:
  ingressClassName: nginx
  rules:
  - host: omni.morrislan.net
    http:
      paths:
      - backend:
          service:
            name: internal
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - omni.morrislan.net
    - k8s.morrislan.net
    - siderolink.morrislan.net
    secretName: omni-tls
